--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   # 1. Clona Flutter (versión estable)
   # 2. Habilita la web
   # 3. Construye la app
-  command = "git clone https://github.com/flutter/flutter.git -b stable && ./flutter/bin/flutter config --enable-web && ./flutter/bin/flutter build web --release"
+  command = "([ -d flutter ] || git clone https://github.com/flutter/flutter.git -b stable) && ./flutter/bin/flutter config --enable-web && ./flutter/bin/flutter build web --release"
   
   # Carpeta donde Flutter deja los archivos listos para publicar
   publish = "build/web"
