--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   # 1. Clona Flutter (versión estable)
   # 2. Habilita la web
   # 3. Construye la app
-  command = "rm -rf flutter && git clone https://github.com/flutter/flutter.git -b stable && ./flutter/bin/flutter config --enable-web && ./flutter/bin/flutter build web --release"
+  command = "rm -rf flutter && git clone https://github.com/flutter/flutter.git -b stable && ./flutter/bin/flutter config --enable-web && ./flutter/bin/flutter build web --release --dart-define=GOOGLE_API_KEY=$GOOGLE_API_KEY"
   
   # Carpeta donde Flutter deja los archivos listos para publicar
   publish = "build/web"
